# OOP_4_1_13

./: .coverage  main.py  pyproject.toml
src/: classes_description.py
tests/: test_main.py
